apps/shop/email/k8s/overlays/non-prod/destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: shop-email-dev
spec:
  host: shop-email.shop-email.svc.cluster.local
  subsets:
  - name: shop-email-dev
    labels:
      app: shop-email
      env: dev
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: shop-email-dev-d1a
    labels:
      app: shop-email
      env: dev
      deploy.cloud.google.com/target-id: d1a
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
